celery+friends api+docs+new structure
