# backend/apps/passwordChange/views.py
@@ -6,7 +6,7 @@ from rest_framework.response import Response
 from rest_framework import status
 from rest_framework.views import APIView
 from django.contrib.auth import authenticate, login
-from apps.authentication.sending import sendInfo
+from apps.authentication.tasks import sendInfo
 
 class ChangePasswordAPI(generics.UpdateAPIView):
     serializer_class = ChangePasswordSerializer
@@ -29,7 +29,7 @@ class ChangePasswordAPI(generics.UpdateAPIView):
         newPassword = serializer.data.get("newPassword")
         self.object.set_password(newPassword)
         self.object.save()
-        sendInfo(request.user.email,request.user.username,
+        sendInfo.delay(request.user.email,request.user.username,
                 info="Пароль от вашего аккаунта был изменён",
                 subject='Смена пароля'
         )
